@@ -4,9 +4,11 @@ import io.axoniq.axonserver.cluster.util.AxonThreadFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
+import java.security.AccessController;
+import java.security.PrivilegedAction;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
@@ -14,50 +16,53 @@ import java.util.concurrent.TimeUnit;
 /**
  * Utility to support cleaning MemoryMapped files on Windows. When running on Windows MemoryMappedFiles retain lock on file, even when closed. Need to call clean
  * to remove the lock explicitely, otherwise it depends on the OS cleaning the memory segment.
- * Original code from Tomcat to clean buffer: org.apache.tomcat.util.buf.ByteBufferUtils
  *
  * @author Marc Gathier
+ * @since 4.1
  */
 public class CleanUtils {
-    private static final Method cleanerMethod;
-    private static final Method cleanMethod;
     private static final Logger logger = LoggerFactory.getLogger(CleanUtils.class);
     private static final ScheduledExecutorService cleanupExecutor = Executors.newSingleThreadScheduledExecutor(new AxonThreadFactory("fileCleaner"));
+    private static final boolean java8 = System.getProperty("java.version").startsWith("1.8");
 
-    static {
-        ByteBuffer tempBuffer = ByteBuffer.allocateDirect(0);
-        Method cleanerMethodLocal;
-        Method cleanMethodLocal;
-
-        try {
-            cleanerMethodLocal = tempBuffer.getClass().getMethod("cleaner");
-            cleanerMethodLocal.setAccessible(true);
-            Object cleanerObject = cleanerMethodLocal.invoke(tempBuffer);
-            if (cleanerObject instanceof Runnable) {
-                cleanMethodLocal = Runnable.class.getMethod("run");
-            } else {
-                cleanMethodLocal = cleanerObject.getClass().getMethod("clean");
+    private static void cleanOldsJDK(final ByteBuffer buffer) {
+        AccessController.doPrivileged((PrivilegedAction<Void>) () -> {
+            try {
+                Method getCleanerMethod = buffer.getClass().getMethod("cleaner", (Class[]) null);
+                if (!getCleanerMethod.isAccessible()) {
+                    getCleanerMethod.setAccessible(true);
+                }
+                Object cleaner = getCleanerMethod.invoke(buffer, (Object[]) null);
+                Method clean = cleaner.getClass().getMethod("clean", (Class[]) null);
+                clean.invoke(cleaner, (Object[]) null);
+            } catch (Exception ex) {
+                logger.warn("Clean failed", ex);
             }
-
-            cleanMethodLocal.invoke(cleanerObject);
-        } catch (IllegalAccessException methodException) {
-            logger.warn("Unable to configure clean method for MemoryMappedFiles. If you are running on Windows with a Java version 9 or higher start Axon Server with --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED");
-            cleanerMethodLocal = null;
-            cleanMethodLocal = null;
-        } catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException  methodException) {
-            logger.warn("Unable to configure clean method for MemoryMappedFiles", methodException);
-            cleanerMethodLocal = null;
-            cleanMethodLocal = null;
-        }
-
-        cleanerMethod = cleanerMethodLocal;
-        cleanMethod = cleanMethodLocal;
+            return null;
+        });
     }
+
+    private static void cleanJavaWithModules(final java.nio.ByteBuffer buffer) {
+        AccessController.doPrivileged((PrivilegedAction<Void>) () -> {
+            try {
+                final Class<?> unsafeClass = Class.forName("sun.misc.Unsafe");
+                final Field theUnsafeField = unsafeClass.getDeclaredField("theUnsafe");
+                theUnsafeField.setAccessible(true);
+                final Object theUnsafe = theUnsafeField.get(null);
+                final Method invokeCleanerMethod = unsafeClass.getMethod("invokeCleaner", ByteBuffer.class);
+                invokeCleanerMethod.invoke(theUnsafe, buffer);
+            } catch (Exception ex) {
+                logger.warn("Clean failed", ex);
+            }
+            return null;
+        });
+    }
+
     private CleanUtils() {
     }
 
     public static void cleanDirectBuffer(ByteBuffer buf, boolean allowed, long delay) {
-        if (allowed && cleanMethod != null && buf != null) {
+        if (allowed && buf != null) {
             if (delay <= 0) {
                 doCleanup(buf);
             } else {
@@ -70,11 +75,12 @@ public class CleanUtils {
         }
     }
 
+
     private static void doCleanup(ByteBuffer buf) {
-        try {
-            cleanMethod.invoke(cleanerMethod.invoke(buf));
-        } catch (IllegalArgumentException | InvocationTargetException | SecurityException | IllegalAccessException exception) {
-            logger.warn("Clean failed", exception);
+        if (java8) {
+            cleanOldsJDK(buf);
+        } else {
+            cleanJavaWithModules(buf);
         }
     }
 }
